# cdk-api-mcp-server

./: .gitignore  AmazonQ.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: check-updates.yml  pr-test.yml  push-main.yml  release.yml
cdk_api_downloader/: main.py
cdk_api_downloader/aws_cdk/: aws_cdk.py  main.py
cdk_api_mcp_server/: __about__.py  resources.py  server.py
cdk_api_mcp_server/core/: resources.py  server.py
current-versions/: aws-cdk.txt
scripts/download/: main.py
scripts/download/aws-cdk/src/: main.py
tests/: conftest.py  test_basic.py
tests/cdk_api_downloader/: __init__.py
tests/cdk_api_downloader/aws_cdk/: test_aws_cdk.py
tests/cdk_api_mcp_server/: __init__.py
tests/cdk_api_mcp_server/core/: __init__.py  test_resources.py  test_server.py
tests/cdk_api_mcp_server/integration/: test_client.py
tests/cdk_api_mcp_server/unit/: test_resources.py  test_resources_api.py  test_server.py
tests/integration/cdk_api_mcp_server/: test_client.py
tests/unit/cdk_api_downloader/: test_aws_cdk.py
tests/unit/cdk_api_mcp_server/: test_resources.py
